--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@astrojs/netlify": "^3.0.4",
     "astro": "^3.2.3",
     "corenlp": "^1.5.2",
     "n": "^9.2.0",
