--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "spacy": "^0.0.4"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@types/node": "^20.8.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
