--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "-": "^0.0.1",
     "@astrojs/netlify": "^3.0.4",
     "astro": "^3.2.3",
+    "compromise": "^14.10.0",
     "corenlp": "^1.5.2",
     "n": "^9.2.0",
     "spacy": "^0.0.4"
