--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/netlify": "^3.0.4",
     "astro": "^3.2.3",
     "compromise": "^14.10.0",
+    "compromise-dates": "^3.4.2",
     "corenlp": "^1.5.2",
     "n": "^9.2.0",
     "spacy": "^0.0.4"
